--- a/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
+++ b/src/app/shared/components/quotation-landing-screen/quotation-landing-screen.component.html
@@ -280,34 +280,36 @@
   [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
   responsiveLayout="stack"
   [scrollable]="true"
-  scrollHeight="400px"
+ 
   currentPageReportTemplate="{first} - {last} of {totalRecords}"
   styleClass="p-datatable-sm">
       <ng-template pTemplate="header">
         <tr>
-          <th>Quotation No.</th>
-          <th>Client Name</th>
+          <th>{{ 'gis.quotation.quotation_number' | translate }}</th>
+          <th>{{ 'gis.quotation.client' | translate }}</th>
           <th>Sum Assured</th>
           <th>Premium</th>
           <th>Intermediary</th>
-          <th>Date Created</th>
-          <th>Cover From</th>
-          <th>Cover To</th>
-          <th>Status</th>
+          <th>Date created</th>
+          <th>Cover from</th>
+          <th>Cover to</th>
+          <th>{{ 'gis.quotation.status' | translate }}</th>
           <th>Action</th>
+
+      
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-quotation>
         <tr style="cursor: pointer" >
           <td>{{ quotation?.quotationNumber || '' }}</td>
-          <td>{{ quotation?.clientName || '' }}</td>
-          <td>{{ quotation?.clientName ||''}}</td>
-          <td>{{ quotation?.clientName ||'' }}</td>
-          <td>{{ quotation?.clientName || '' }}</td>
+          <td>{{ quotation?.clientName || ''|sentenceCase }}</td>
+          <td>{{ quotation?.sumInsured ||''}}</td>
+          <td>{{ quotation?.premium ||'' }}</td>
+          <td>{{ quotation?.agentShortDescription || ''|sentenceCase }}</td>
           <td>{{ quotation?.quotDate || '' | date:'short' }}</td>
           <td>{{ quotation?.fromDate || '' }}</td>
           <td>{{ quotation?.toDate || '' }}</td>
-          <td>{{ quotation?.status || '' }}</td>
+          <td>{{ quotation?.status || '' |sentenceCase}}</td>
           <td>{{ "Process" }}</td>
         </tr>
       </ng-template>
